--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>jgrapht</artifactId>
             <version>0.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.11</artifactId>
+            <version>1.3.1</version>
+        </dependency>
     </dependencies>
 
 </project>
