--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
             <artifactId>ws4j</artifactId>
             <version>1.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>edu.ucla.sspace</groupId>
+            <artifactId>sspace</artifactId>
+            <version>2.0</version>
+        </dependency>
     </dependencies>
 
 </project>
